@@ -1,3 +1,13 @@
+2008-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR classpath/36477:
+	* gnu/java/lang/CPStringBuilder.java,
+	(setLength(int)): Don't ensure capacity when
+	new length is 0.
+	(ensureCapacity(int)): Allocate double the minimum
+	capacity rather than double the array length when
+	allocating a new array after a write.
+	
 2008-06-15  Mario Torre  <neugens@aicas.com>
 
 	* gnu/java/awt/java2d/RasterGraphics.java: remove unused import that cause
